--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
     </form>
     <input id="loginBtn" type="Submit" value="Login">
-        <a href="../signup folder/signup.html">create account</a>
+        <a href="./signup folder/signup.html">create account</a>
       </div>
   </div>
   <script type="module" src="login.js"></script>
